complete menu (without read and write)